2006-06-18  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Don't destroy the prefs window if the window manager closes it
	(#343600).

2006-06-18  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Clear the genre field when re-reading the disc (#340524)

2006-06-14  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.15.3.

2006-06-05  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* libjuicer/sj-metadata-musicbrainz.c:
	* src/sj-main.c:
	* src/sj-play.c:
	Update for new n-c-b API (#342603, thanks William Jon McCann)

2006-05-17  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Bump intltool requirement, version 2.15.2.1.

2006-05-14  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.15.2.

2006-05-09  Ross Burton  <ross@burtonini.com>

	* src/sj-error.[ch]:
	* src/sj-metadata-cdtext.h:
	Remove

	* tests/Makefile.am:
	Update.

2006-05-09  Ross Burton  <ross@burtonini.com>

	* [most files]:
	Split into libjuicer, the backend code, and src, the UI.

2006-05-02  Luca Cavalli  <loopback@slackit.org>

	* src/gconf-bridge.c: (window_binding_perform_scheduled_sync),
	(window_binding_state_event_cb), (gconf_bridge_bind_window):
	Save and restore window maximized state (#340038).

2006-04-29  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	* src/sound-juicer.h:
	* src/sj-main.c:
	Remove ENABLE_DEBUG and use GLib debug flags.  Based on a patch by
	Przemysław Grzegorczyk.

2006-04-29  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Translate the help title (spotted by Przemysław Grzegorczyk)

2006-04-24  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	* NEWS:
	Version 2.15.1.

	* Makefile.am:
	Add dev-release target that doesn't install DOAP files, and
	perform the tag too.

2006-04-23  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	In completion_cb only manipulate the track store if there is stuff
	in it (#333402)

2006-04-23  Ross Burton  <ross@burtonini.com>
