@@ -1,3 +1,8 @@
+2006-07-12  Ross Burton  <ross@burtonini.com>
+
+	* libjuicer/sj-extractor.c:
+	Better error handling (#338511, Tim-Philipp Muller)
+
 2006-06-18  Ross Burton  <ross@burtonini.com>
 
 	* data/sound-juicer.glade:
